// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop­"
    >
      Expense
    </div>
    <div
      className="show-for-desktop­"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={95000}
      createdAt={345600000}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={195}
      createdAt={0}
      description="Gum"
      id="2"
      key="2"
      note=""
    />
    <Connect(ExpenseListItem)
      amount={300}
      createdAt={-345600000}
      description="Coffee"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render with no ExpenseList 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop­"
    >
      Expense
    </div>
    <div
      className="show-for-desktop­"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <p>
        No expenses
      </p>
    </div>
  </div>
</div>
`;
